[tool.poetry]
name = "flask_sample02"
version = "0.1.0"
description = ""
authors = ["test-user-camp <test-user-camp@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
